# murcchana-server

./: .gitignore  CMakeLists.txt  conf.ini  cons.sh  notes.txt
src/: logging.h  main.cpp  server.cpp  server.hpp
